update surefire-plugin